--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-prod": "npm run prebuild && ng build --configuration production ",
     "build-test": "npm run prebuild && ng build --configuration test",
     "build-docker": "export DOCKER=true && npm run prebuild && npm run build-prod",
-    "build-docker-image": "docker image build --build-arg APP_FILES=dist -t dabstimmbox-docker:0.0 .",
+    "build-docker-image": "docker image build --build-arg APP_FILES=dist -t terminfinder-docker:0.0.0 .",
     "lint": "npm run prebuild && ng lint",
     "lint-fix": "npm run prebuild && ng lint --fix",
     "prebuild": "node prebuild.js",
