feat: update snapshot to v2.1.10
changed parameters and replacement scripts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - version
   - build
   - test
-  - release
+  - docker
 
 cache:
   key: ${CI_COMMIT_REF_SLUG}
@@ -22,6 +22,24 @@ version:
     - VERSION=$(git mkver next)
     - echo $VERSION
     - echo "VERSION=$VERSION" >> variables.env
+
+release-gitlab:
+  image: $ARTIFACTORY_DOCKER_COMMON/node:lts
+  needs:
+    - version
+  rules:
+    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
+  before_script:
+    - curl --location --output /usr/local/bin/release-cli "https://release-cli-downloads.s3.amazonaws.com/latest/release-cli-linux-amd64"
+    - chmod +x /usr/local/bin/release-cli
+    - release-cli -v
+  script:
+    - echo "Create Release in GitLab $TAG_NAME"
+  release:
+    name: "Release v$VERSION"
+    description: "Automatically generated release v$VERSION"
+    tag_name: "v$VERSION"
+    ref: "$CI_COMMIT_SHA"
 
 build-prod:
   image: $ARTIFACTORY_DOCKER_COMMON/node:lts
@@ -60,7 +78,7 @@ e2e:
 
 docker-build-and-release:
   image: $ARTIFACTORY_SERVICE_IMAGES_URL/buildah
-  stage: release
+  stage: docker
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
   script:
@@ -68,21 +86,3 @@ docker-build-and-release:
     - sed -i "s/docker\.io/$ARTIFACTORY_DOCKER_COMMON/g" Dockerfile
     - buildah bud --creds ${DOCKER_DEV_USER}:${DOCKER_DEV_PASSWORD} -t ${DOCKER_DEV_URL}/${DOCKER_IMAGE_NAME}:${CI_COMMIT_SHORT_SHA}
     - buildah push --creds ${DOCKER_DEV_USER}:${DOCKER_DEV_PASSWORD} ${DOCKER_DEV_URL}/${DOCKER_IMAGE_NAME}:${CI_COMMIT_SHORT_SHA}
-
-release-gitlab:
-  image: $ARTIFACTORY_DOCKER_COMMON/node:lts
-  stage: release
-  rules:
-    - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
-  before_script:
-    - curl --location --output /usr/local/bin/release-cli "https://release-cli-downloads.s3.amazonaws.com/latest/release-cli-linux-amd64"
-    - chmod +x /usr/local/bin/release-cli
-    - release-cli -v
-  script:
-    - echo "Create Release in GitLab $TAG_NAME"
-  release:
-    name: "Release v$VERSION"
-    description: "Automatically generated release v$VERSION"
-    tag_name: "v$VERSION"
-    ref: "$CI_COMMIT_SHA"
-
