--- a/mkver.conf
+++ b/mkver.conf
@@ -2,7 +2,6 @@ defaults {
   tag: false
   tagMessageFormat: "release {Tag}"
   preReleaseFormat: "RC{PreReleaseNumber}"
-  buildMetaDataFormat: "{Branch}.{ShortHash}"
   includeBuildMetaData: true
   whenNoValidCommitMessages: IncrementPatch
   patches: [
@@ -13,6 +12,15 @@ branches: [
   {
     pattern: "main"
     includeBuildMetaData: false
+    formats: [
+      { name: Docker, format: "{Version}" }
+    ]
+  }
+  {
+    pattern: ".*"
+    formats: [
+      { name: Docker, format: "{Version}_{BuildMetaData}" }
+    ]
   }
 ]
 patches: [
