--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "skipLibCheck": true
   },
   "angularCompilerOptions": {
     "strictTemplates": true
