ci: add version

--- a/mkver.conf
+++ b/mkver.conf
@@ -19,7 +19,7 @@ branches: [
   {
     pattern: ".*"
     formats: [
-      { name: Docker, format: "{Version}_{BuildMetaData}" }
+      { name: Docker, format: "{Version}-{BuildMetaData}" }
     ]
   }
 ]
@@ -32,7 +32,7 @@ patches: [
     replacements: [
       {
         find: "\"version\": \"{VersionRegex}\""
-        replace: "\"version\": \"{Version}\""
+        replace: "\"version\": \"{Docker}\""
       }
     ]
   }
