ci: allow audit to fail
Signed-off-by: Tjorben Schiller <tjorben.schiller@dataport.de>

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,7 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm audit --omit=dev
+        continue-on-error: true
 
   e2e:
     runs-on: ubuntu-latest
