--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,9 @@
   "$schema": "node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "defaultCollection": "@angular-eslint/schematics"
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   },
   "projects": {
     "terminfinder": {
