build: refactor scripts and remove cross-env dependency

--- a/mkver.conf
+++ b/mkver.conf
@@ -29,6 +29,7 @@ patches: [
     filePatterns: [
       "package.json"
     ]
+    format: Docker
     replacements: [
       {
         find: "\"version\": \"{VersionRegex}\""
