--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "description": "Erstelle Umfragen und komme mit deinen Leuten auf einen Nenner!",
   "license": "EUPL-1.2",
   "scripts": {
-    "backend-mock": "cross-env node backend-mock/server.js",
-    "start": "cross-env PRODUCTION=false ADDRESSING=sie npm run prebuild && ng serve",
+    "backend-mock": "node backend-mock/server.js",
+    "start": "export ADDRESSING=sie npm run prebuild && ng serve",
+    "start-docker": "docker image build --build-arg APP_FILES=dist -t terminfinder-docker:0.0.0 .",
     "test": "npm run prebuild && ng serve --configuration production",
-    "build-prod": "npm run prebuild && ng build --configuration production ",
-    "build-test": "npm run prebuild && ng build --configuration test",
-    "build-docker": "export DOCKER=true PRODUCTION=false && npm run prebuild && npm run build-prod",
-    "build-docker-image": "docker image build --build-arg APP_FILES=dist -t terminfinder-docker:0.0.0 .",
+    "build-prod": "export PRODUCTION=true && npm run prebuild && ng build --configuration production ",
+    "build-test": "export PRODUCTION=true && npm run prebuild && ng build --configuration test",
+    "build-docker-prod": "export DOCKER=true PRODUCTION=true && npm run prebuild && npm run build-prod",
+    "build-docker-test": "export DOCKER=true PRODUCTION=false && npm run prebuild && npm run build-test",
     "compare-locales": "node compare-locales.js",
     "lint": "npm run prebuild && ng lint",
     "lint-fix": "npm run prebuild && ng lint --fix",
@@ -72,7 +73,6 @@
     "btoa": "1.2.1",
     "clipboardy": "4.0.0",
     "cors": "2.7.2",
-    "cross-env": "7.0.3",
     "cypress": "13.6.3",
     "dayjs": "1.11.10",
     "eslint": "8.40.0",
