test: add playwright

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,28 +10,52 @@ jobs:
   lint_audit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run lint
-      - run: npm audit --omit=dev
+          node-version: lts/*
+      - name: Install dependencies
+        run: npm ci
+      - name: Run linter
+        run: npm run lint
+      - name: Run audit
+        run: npm audit --omit=dev
         continue-on-error: true
 
   e2e:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 18.x
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run build-prod
+          node-version: lts/*
+      - name: Install dependencies
+        run: npm ci
+      - name: Build production
+        run: npm run build-prod
       - name: Cypress run
         uses: cypress-io/github-action@v5
         with:
           start: npm run http-server
           command: npm run ci-cypress
+
+  playwright:
+    timeout-minutes: 60
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npx playwright test
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 7
