--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "EUPL-1.2",
   "scripts": {
     "backend-mock": "node backend-mock/server.js",
-    "start": "export ADDRESSING=sie npm run prebuild && ng serve",
+    "start": "export TITLE='Lokaler Test' ADDRESSING=sie && npm run prebuild && ng serve",
     "start-docker": "docker image build --build-arg APP_FILES=dist -t terminfinder-docker:0.0.0 .",
     "test": "npm run prebuild && ng serve --configuration production",
     "build-prod": "export PRODUCTION=true && npm run prebuild && ng build --configuration production ",
@@ -64,8 +64,10 @@
     "@angular/cli": "17.2.2",
     "@angular/compiler-cli": "17.1.2",
     "@angular/language-service": "17.1.2",
+    "@axe-core/playwright": "^4.8.5",
     "@cyclonedx/cyclonedx-npm": "1.16.1",
     "@cypress/schematic": "2.5.1",
+    "@playwright/test": "^1.42.1",
     "@types/node": "18.19.10",
     "@typescript-eslint/eslint-plugin": "6.20.0",
     "@typescript-eslint/experimental-utils": "5.62.0",
