feat: use CUSTOMER_ID in container image

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "export ADDRESSING=sie npm run prebuild && ng serve",
     "start-docker": "docker image build --build-arg APP_FILES=dist -t terminfinder-docker:0.0.0 .",
     "test": "npm run prebuild && ng serve --configuration production",
-    "build-prod": "export PRODUCTION=true && npm run prebuild && ng build --configuration production ",
+    "build-prod": "export PRODUCTION=true CUSTOMER_ID=22222222-2222-2222-2222-222222222222 && npm run prebuild && ng build --configuration production ",
     "build-test": "export PRODUCTION=true && npm run prebuild && ng build --configuration test",
     "build-docker-prod": "export DOCKER=true PRODUCTION=true && npm run prebuild && npm run build-prod",
     "build-docker-test": "export DOCKER=true PRODUCTION=false && npm run prebuild && npm run build-test",
@@ -18,13 +18,13 @@
     "lint-fix": "npm run prebuild && ng lint --fix",
     "prebuild": "node prebuild.js",
     "generate-sbom": "npx @cyclonedx/cyclonedx-npm --omit dev --omit optional --omit peer --output-file src/sbom.json",
-    "ci-cypress": "(npm run http-server &) && (npx cypress run --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=80248A42-8FE2-4D4A-89DA-02E683511F76)",
+    "ci-cypress": "(npm run http-server &) && (npx cypress run --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=22222222-2222-2222-2222-222222222222)",
     "http-server": "npx http-server dist -c-1 -s -p 4200",
     "cy-verify": "npx cypress verify",
     "cy-info": "npx cypress info",
     "cy-version": "npx cypress version",
     "cy-cache-list": "npx cypress cache list",
-    "cy-open-local": "npx cypress open --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=80248A42-8FE2-4D4A-89DA-02E683511F76"
+    "cy-open-local": "npx cypress open --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=11111111-1111-1111-1111-111111111111"
   },
   "private": true,
   "dependencies": {
