--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "export ADDRESSING=sie npm run prebuild && ng serve",
     "start-docker": "docker image build --build-arg APP_FILES=dist -t terminfinder-docker:0.0.0 .",
     "test": "npm run prebuild && ng serve --configuration production",
+    "jest": "ng test",
     "build-prod": "export PRODUCTION=true CUSTOMER_ID=22222222-2222-2222-2222-222222222222 && npm run prebuild && ng build --configuration production ",
     "build-test": "export PRODUCTION=true && npm run prebuild && ng build --configuration test",
     "build-docker-prod": "export DOCKER=true PRODUCTION=true && npm run prebuild && npm run build-prod",
@@ -48,7 +49,7 @@
     "mobile-detect": "1.4.5",
     "moment": "2.30.1",
     "ngx-clipboard": "16.0.0",
-    "rxjs": "6.6.7",
+    "rxjs": "7.4.0",
     "tslib": "2.5.2",
     "zone.js": "0.14.4"
   },
@@ -64,6 +65,7 @@
     "@angular/language-service": "17.1.2",
     "@cyclonedx/cyclonedx-npm": "1.16.1",
     "@cypress/schematic": "2.5.1",
+    "@types/jest": "29.5.12",
     "@types/node": "18.19.10",
     "@typescript-eslint/eslint-plugin": "6.20.0",
     "@typescript-eslint/experimental-utils": "5.62.0",
@@ -80,7 +82,9 @@
     "express": "4.19.2",
     "font-awesome": "4.7.0",
     "http-server": "14.1.1",
+    "jest": "29.7.0",
     "moment-timezone": "0.5.45",
+    "ngx-translate-testing": "7.0.0",
     "nodemon": "3.1.0",
     "ts-node": "10.9.1",
     "typemoq": "2.1.0",
