--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "font-awesome": "4.7.0",
     "http-server": "14.1.1",
     "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "moment-timezone": "0.5.45",
     "ngx-translate-testing": "7.0.0",
     "nodemon": "3.1.0",
