--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@angular/platform-browser": "17.1.2",
     "@angular/platform-browser-dynamic": "17.1.2",
     "@angular/router": "17.1.2",
+    "@angular/youtube-player": "17.3.10",
     "@ng-bootstrap/ng-bootstrap": "16.0.0",
     "@ngx-translate/core": "15.0.0",
     "@ngx-translate/http-loader": "8.0.0",
