--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm run prebuild && ng serve --configuration production",
     "jest": "ng test",
     "build-prod": "export PRODUCTION=true && npm run prebuild && ng build --configuration production ",
-    "build-test": "export PRODUCTION=true && npm run prebuild && ng build --configuration test",
+    "build-test": "export PRODUCTION=false && npm run prebuild && ng build --configuration test",
     "build-docker-prod": "export DOCKER=true PRODUCTION=true && npm run prebuild && npm run build-prod",
     "build-docker-test": "export DOCKER=true PRODUCTION=false && npm run prebuild && npm run build-test",
     "compare-locales": "node compare-locales.js",
