--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -46,6 +46,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: cperezabo/setup-git-mkver@v1.2.0
+      - run: git mkver next --format '{Docker}'
       - run: gh api --method POST /repos/dataport/terminfinder-frontend/releases -f "tag_name=v$(git mkver next --format '{Docker}')" -F "generate_release_notes=true"
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
