feat: scriptoptimization by removing production var and adding .env files fix(deps): use node 20.16.0

--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
   "license": "EUPL-1.2",
   "scripts": {
     "backend-mock": "node backend-mock/server.js",
-    "start": "export ADDRESSING=sie npm run prebuild && ng serve",
+    "start": "ng serve",
     "start-docker": "docker image build --build-arg APP_FILES=dist -t terminfinder-docker:0.0.0 .",
-    "test": "npm run prebuild && ng serve --configuration production",
-    "jest": "ng test",
-    "build-prod": "export PRODUCTION=true && npm run prebuild && ng build --configuration production ",
-    "build-test": "export PRODUCTION=false && npm run prebuild && ng build --configuration test",
-    "build-docker-prod": "export DOCKER=true PRODUCTION=true && npm run prebuild && npm run build-prod",
-    "build-docker-test": "export DOCKER=true PRODUCTION=false && npm run prebuild && npm run build-test",
+    "test": "ng test",
+    "build": "ng build --configuration production",
+    "build-docker": "ng build --configuration production",
     "compare-locales": "node compare-locales.js",
     "lint": "npm run prebuild && ng lint",
     "lint-fix": "npm run prebuild && ng lint --fix",
-    "prebuild": "node prebuild.js",
+    "prestart": "node --env-file=.env/.start.env prebuild.js",
+    "prebuild": "node --env-file=.env/.build.env prebuild.js",
+    "prebuild-docker": "node --env-file=.env/.docker.env prebuild.js",
     "generate-sbom": "npx @cyclonedx/cyclonedx-npm --omit dev --omit optional --omit peer --output-file src/sbom.json",
     "ci-cypress": "(npm run http-server &) && (npx cypress run --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=22222222-2222-2222-2222-222222222222)",
     "http-server": "npx http-server dist -c-1 -s -p 4200",
@@ -28,6 +27,9 @@
     "cy-open-local": "npx cypress open --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=11111111-1111-1111-1111-111111111111"
   },
   "private": true,
+  "engines": {
+    "node": ">=20.16.0"
+  },
   "dependencies": {
     "@angular-devkit/architect": "0.1703.5",
     "@angular/animations": "17.1.2",
@@ -78,7 +80,7 @@
     "dayjs": "1.11.10",
     "eslint": "8.57.0",
     "eslint-plugin-import": "2.29.1",
-    "eslint-plugin-jsdoc": "39.3.2",
+    "eslint-plugin-jsdoc": "50.2.2",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "express": "4.19.2",
     "font-awesome": "4.7.0",
