--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,7 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - run: npm run lint
-      - run: npm run jest
+      - run: npm run test
       - run: npm audit --omit=dev
         continue-on-error: true
 
@@ -30,7 +30,7 @@ jobs:
           node-version: 20.16.x
           cache: 'npm'
       - run: npm ci
-      - run: npm run build-prod
+      - run: npm run build
         env:
           CUSTOMER_ID: '22222222-2222-2222-2222-222222222222'
       - name: Cypress run
