--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "mobile-detect": "1.4.5",
     "moment": "2.30.1",
     "ngx-clipboard": "16.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "7.8.1",
     "tslib": "2.5.2",
     "zone.js": "0.14.4"
