--- a/angular.json
+++ b/angular.json
@@ -35,11 +35,13 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.css",
               "node_modules/font-awesome/scss/font-awesome.scss",
+              "node_modules/mediaelement/build/mediaelementplayer.css",
               "src/styles.scss"
             ],
             "scripts": [
               "node_modules/bootstrap/dist/js/bootstrap.js",
-              "node_modules/moment/min/moment-with-locales.js"
+              "node_modules/moment/min/moment-with-locales.js",
+              "node_modules/mediaelement/build/mediaelement-and-player.js"
             ],
             "vendorChunk": true,
             "extractLicenses": false,
