--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bootstrap": "5.3.3",
     "calendar-link": "2.6.0",
     "core-js": "3.8.3",
+    "mediaelement": "^7.0.7",
     "mobile-detect": "1.4.5",
     "moment": "2.30.1",
     "ngx-clipboard": "16.0.0",
