feat: include `de` lang for `mejs`
- include `mejs` in language handler
- add new dir `type` & include in `tsconfig`
- add type `mejs.d.ts` to avoid access over the `window` var

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "resolveJsonModule": true,
     "target": "ES2022",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "src/app/types"
     ],
     "lib": [
       "es2020",
