--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,11 +5,11 @@
     "module": "es2020",
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "esModuleInterop": true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "target": "ES2022",
     "typeRoots": [
