--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,8 @@
             },
             "index": "src/index.html",
             "polyfills": [
-              "src/polyfills.ts"
+              "src/polyfills.ts",
+              "@angular/localize/init"
             ],
             "tsConfig": "src/tsconfig.app.json",
             "sourceMap": true,
