--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@angular/platform-browser": "18.2.13",
     "@angular/platform-browser-dynamic": "18.2.13",
     "@angular/router": "18.2.13",
-    "@ng-bootstrap/ng-bootstrap": "16.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@ngx-translate/core": "16.0.4",
     "@ngx-translate/http-loader": "8.0.0",
     "@popperjs/core": "2.11.8",
@@ -58,11 +58,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "18.2.20",
-    "@angular-eslint/builder": "17.3.0",
-    "@angular-eslint/eslint-plugin": "17.2.1",
-    "@angular-eslint/eslint-plugin-template": "18.0.0",
-    "@angular-eslint/schematics": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
+    "@angular-eslint/builder": "^18.0.0",
+    "@angular-eslint/eslint-plugin": "^18.0.0",
+    "@angular-eslint/eslint-plugin-template": "^18.0.0",
+    "@angular-eslint/schematics": "^18.0.0",
+    "@angular-eslint/template-parser": "^18.0.0",
     "@angular/cli": "18.2.20",
     "@angular/compiler-cli": "18.2.13",
     "@angular/language-service": "18.2.13",
