Revert "refactor: use `concurrently` script for `ci-cypress`"
This reverts commit 17c683a6ce3877caf22f9a38544afda2dda5a0a3.

refactor: use `concurrently` script for `ci-cypress`

chore: update `package-lock.json`

Revert "build: update cypress to `v14.5.2`"

This reverts commit 4e49fc8f

fix: `http-server` serving wrong directory

ci: refactor script `ci-cypress` to work on UNIX & Windows machines

ci: save screenshots on failure

ci: enable debugging logs

ci: update cypress config

build: update cypress to `v14.5.2`

ci: force step

Revert "build: update `node` to `v22.16`"

This reverts commit 5b58c4578d3de6a88d5a507dc0f510cd50b1dff1.

build: update `node` to `v22.16`

ci: bump version of `upload-artifact`

ci: enable screenshots on failure

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,6 +38,12 @@ jobs:
         with:
           start: npm run http-server
           command: npm run ci-cypress
+      - name: Upload screenshots
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots
 
   create-release:
     runs-on: ubuntu-latest
