--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "prebuild-docker": "node --env-file=.env/.docker.env prebuild.js",
     "generate-sbom": "npx @cyclonedx/cyclonedx-npm --omit dev --omit optional --omit peer --output-file src/sbom.json",
     "ci-cypress": "(npm run http-server &) && (npx cypress run --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=22222222-2222-2222-2222-222222222222)",
-    "http-server": "npx http-server dist -c-1 -s -p 4200",
+    "ci-cypress-concurrently": "concurrently \"npm run http-server\" \"npx cypress run --env baseHref=http://localhost:4200,apiUrl=http://localhost:4200,customerId=22222222-2222-2222-2222-222222222222\"",
+    "http-server": "npx http-server dist/browser -c-1 -s -p 4200",
     "cy-verify": "npx cypress verify",
     "cy-info": "npx cypress info",
     "cy-version": "npx cypress version",
@@ -75,6 +76,7 @@
     "@typescript-eslint/parser": "6.20.0",
     "btoa": "1.2.1",
     "clipboardy": "4.0.0",
+    "concurrently": "^9.2.0",
     "cors": "2.7.2",
     "cypress": "13.6.3",
     "dayjs": "1.11.10",
