--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "mediaelement": "^7.0.7",
     "moment": "2.30.1",
     "ngx-clipboard": "16.0.0",
-    "ngx-toastr": "^19.0.0",
+    "ngx-toastr": "19.1.0",
     "rxjs": "7.8.1",
     "tslib": "2.5.2",
     "zone.js": "0.14.10"
