--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,13 @@
   },
   "angularCompilerOptions": {
     "strictTemplates": true
-  }
+  },
+  "exclude": [
+    // See https://github.com/cypress-io/cypress/issues/22059#issuecomment-1148921141
+    "./cypress.config.ts",
+    //other exclusions that may help https://github.com/cypress-io/cypress/issues/22059#issuecomment-1428298264
+    "node_modules",
+    "cypress",
+    "**/*.cy.tsx"
+  ]
 }
