feat: imprint, privacy, tos and accessibility from environment

--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,11 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "allowedCommonJsDependencies": [
+              "buffer",
+              "mediaelement",
+              "moment"
+            ],
             "outputPath": {
               "base": "dist"
             },
