--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "bootstrap": "5.3.3",
     "calendar-link": "2.6.0",
     "core-js": "3.45.0",
+    "dompurify": "3.3.0",
     "mediaelement": "^7.0.7",
     "moment": "2.30.1",
     "ngx-clipboard": "16.0.0",
@@ -69,6 +70,7 @@
     "@angular/language-service": "20.1.7",
     "@cyclonedx/cyclonedx-npm": "1.16.1",
     "@cypress/schematic": "2.5.1",
+    "@types/dompurify": "3.0.5",
     "@types/jest": "29.5.12",
     "@types/node": "24.0.4",
     "@typescript-eslint/eslint-plugin": "6.20.0",
