--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       TITLE: "Terminfinder Docker Test"
       API_URL: "http://localhost:4201" # Run `npm run backend-mock` in another terminal
+      #EMAIL: "john.doe@example.com"
       #COLORS: '{"primary":"#ff0000","secondary":"#00ff00"}'
       #IMPRINT: "<h2>Imprint</h2><p>This is the imprint. Hello from Docker.</p>"
       #PRIVACY: "<h2>Privacy Policy</h2><p>This is the privacy policy. Hello from Docker.</p>"
