refactor: remove unnecessary script refs
Likely a leftover from an angular update. New build system works without
 explicit refs.

--- a/angular.json
+++ b/angular.json
@@ -47,11 +47,7 @@
               "node_modules/mediaelement/build/mediaelementplayer.css",
               "src/styles.scss"
             ],
-            "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.js",
-              "node_modules/moment/min/moment-with-locales.js",
-              "node_modules/mediaelement/build/mediaelement-and-player.js"
-            ],
+            "scripts": [],
             "extractLicenses": false,
             "optimization": false,
             "namedChunks": true,
