--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@angular/language-service": "20.1.7",
     "@cyclonedx/cyclonedx-npm": "1.16.1",
     "@cypress/schematic": "2.5.1",
+    "@fortawesome/fontawesome-free": "6.7.2",
     "@types/dompurify": "3.0.5",
     "@types/jest": "29.5.12",
     "@types/node": "24.0.4",
@@ -86,7 +87,6 @@
     "eslint-plugin-jsdoc": "50.2.2",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "express": "4.21.2",
-    "font-awesome": "4.7.0",
     "http-server": "14.1.1",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
