--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,7 @@ name: docker
 
 on:
   workflow_run:
-    workflows: [ node-js ]
+    workflows: [ release ]
     types: [ completed ]
     branches: [ main ]
 
@@ -22,8 +22,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - name: Fetch all tags
-        run: git fetch --tags
       - name: Get latest tag from HEAD
         id: get-tag
         run: |
