chore: add polyfill
Was added implicitly before.

--- a/angular.json
+++ b/angular.json
@@ -109,7 +109,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:jest",
           "options": {
-            "polyfills": ["zone.js", "zone.js/testing"],
+            "polyfills": ["zone.js", "zone.js/testing", "@angular/localize/init"],
             "tsConfig": "tsconfig.spec.json"
           }
         }
