--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "cypress": "15.0.0",
     "dayjs": "1.11.19",
     "eslint": "8.57.0",
+    "eslint-formatter-gitlab": "5.1.0",
     "eslint-plugin-import": "2.32.0",
     "eslint-plugin-jsdoc": "50.2.2",
     "eslint-plugin-prefer-arrow": "1.2.3",
